# cc-stack

./: .gitignore  README.md  bootstrap.sh  pyproject.toml
cc_stack/: __init__.py  __main__.py
