[project]
name = "cc-stack"
version = "0.1.0"
description = "Headless bootstrap + self-heal for the Claude Code memory/orchestration/context stack (OMC, codebase-memory-mcp, MemoryOS, headroom). All Claude config changes go through the claude CLI."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "headroom-ai>=0.27",
]

[project.scripts]
cc-stack = "cc_stack:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cc_stack"]
